// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`compose model queries example with nested filters 1`] = `
[
  {
    "ctxModelRefKey": "Org",
    "filter": {
      "kind": "binary",
      "lhs": {
        "kind": "binary",
        "lhs": {
          "kind": "alias",
          "namePath": [
            "org",
            "id",
          ],
        },
        "operator": "is",
        "rhs": {
          "kind": "literal",
          "type": "integer",
          "value": 1,
        },
      },
      "operator": "and",
      "rhs": {
        "kind": "alias",
        "namePath": [
          "is_active",
        ],
      },
    },
    "fromPath": [
      "Org",
      "repos",
    ],
    "joinPaths": [
      {
        "joinPaths": [
          {
            "joinPaths": [],
            "joinType": "inner",
            "kind": "reference",
            "refKey": "Repo.org",
            "retCardinality": "one",
            "retType": "Org",
          },
        ],
        "joinType": "inner",
        "kind": "relation",
        "refKey": "Org.repos",
        "retCardinality": "many",
        "retType": "Repo",
      },
    ],
    "name": "repos_if_one",
    "nullable": false,
    "refKey": "Org.repos_if_one",
    "retCardinality": "many",
    "retType": "Repo",
  },
]
`;

exports[`compose model queries nested example without filters 1`] = `
[
  {
    "ctxModelRefKey": "Org",
    "filter": undefined,
    "fromPath": [
      "Org",
      "repos",
      "org",
    ],
    "joinPaths": [
      {
        "joinPaths": [
          {
            "joinPaths": [],
            "joinType": "inner",
            "kind": "reference",
            "refKey": "Repo.org",
            "retCardinality": "one",
            "retType": "Org",
          },
        ],
        "joinType": "inner",
        "kind": "relation",
        "refKey": "Org.repos",
        "retCardinality": "many",
        "retType": "Repo",
      },
    ],
    "name": "back_to_org",
    "nullable": false,
    "refKey": "Org.back_to_org",
    "retCardinality": "many",
    "retType": "Org",
  },
]
`;
